# suijin

./: '  .gitignore  AAAAAAAAAAAAAA.mtl  AUTHORS  Cube.mtl  Dough.mtl  KMS  Makefile  Makefile.am  Moarte.mtl  README.md  configure.ac  logout  outf
Items/Dough/: Dough.mtl
Items/Mountain/: Mountain.minfo  Mountain.mtl
Items/Plane/: Plane.minfo  Plane.mtl
Resources/Items/Cube/: Cube.mtl
Resources/Items/Plane/: Plane.mtl
Resources/Items/Plant/: Plant.mtl
lib/: volk
lib/glad/: glad.c
lib/glad/glad/: glad.h
shaders/: cloud_frag.glsl  cloud_vert.glsl  curl_compute.glsl  frag.glsl  lf.glsl  line_vert.glsl  lv.glsl  mf.glsl  mv.glsl  obj_frag.glsl  perlin_compute.glsl  perlinworley_compute.glsl  pf.glsl  point_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  text_frag.glsl  triangle.frag  triangle.vert  uf.glsl  ui_frag.glsl  ui_vert.glsl  vert.glsl  vv.glsl  worley_compute.glsl  worley_points_compute.glsl
src/: defs.h  env.h  fujin.c  fujin.h  izanagi.c  izanagi.h  izanami.c  izanami.h  linalg.c  linalg.h  main.c  nesaku.c  nesaku.h  niagara.c  shaders.c  shaders.h  suijin.c  util.c  util.h
src/.deps/: fujin.Po  fukurokuju.Po  main.Po
x/: Quietus.mtl
